[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaning-openenv"
version = "0.1.0"
description = "A production-grade OpenEnv environment for training and evaluating data-cleaning agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "faker",
    "python-multipart",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
